# raven

./: .dockerignore  .gitignore  Dockerfile  LICENSE  compose.yaml  config.yaml  deploy.sh  prefect.yaml  pyproject.toml
.github/workflows/: lint_and_format.yml
docs/adr/: 000_basic_architecture.md  001_tech_stack.md  002_containerization.md  template.md
orchestration/: config.py  flows.py  tasks.py
tests/: test_tasks.py
tests/data/: dna_balance.json
transforms/: dbt_project.yml  profiles.yml
transforms/models/clean/: schema.yml  sources.yml  valuation.sql
